--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Blur Sensitive Data",
+    "name": "Blur Sensitive Content",
     "version": "1.1",
-    "description": "Blur sensitive data on web pages by hovering and clicking, with a toolbar to control blur.",
+    "description": "A simple tool to blur sensitive content on webpages with a customizable blur intensity slider.",
     "permissions": [
         "activeTab",
         "scripting",
